--- a/angular/src/app/food/food-detail/food-detail.component.html
+++ b/angular/src/app/food/food-detail/food-detail.component.html
@@ -7,6 +7,7 @@
         <td><input type="text" placeholder="Food name" [(ngModel)]="food.food_name"></td>
         <td><input type="text" placeholder="Food description" [(ngModel)]="food.food_description"></td>
         <td><input type="text" placeholder="Food detail" [(ngModel)]="food.food_detail"></td>
+        <td><img [src]="food.img_url" alt="Food Image"></td>
         <td><button (click)="onUpdate()">Update</button></td>
         <td><button (click)="onDelete()">Delete</button></td>
       </tr>
