--- a/angular/src/app/login/login.component.html
+++ b/angular/src/app/login/login.component.html
@@ -1,1 +1,11 @@
-<p>login works!</p>
+<div class="container">
+  <table class="mt-5">
+    <tbody>
+      <tr>
+        <td><input [(ngModel)]="userRequest.email" name="email" type="email" placeholder="Email"></td>
+        <td><input [(ngModel)]="userRequest.password" name="password" type="password" placeholder="Password"></td>
+        <td><button (click)="login()">Login</button></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
